// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with 1 expense 1`] = `
<Styled(div)>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.45
  </h1>
</Styled(div)>
`;

exports[`Should correctly render ExpensesSummary with multiple expenses 1`] = `
<Styled(div)>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $23,232,242.45
  </h1>
</Styled(div)>
`;
